--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
     "@google/genai": "https://esm.sh/@google/genai@^1.37.0",
     "react-router-dom": "https://esm.sh/react-router-dom@^7.12.0",
     "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
-    "reactflow": "https://esm.sh/reactflow@11.11.4"
+    "reactflow": "https://esm.sh/reactflow@11.11.4",
+    "mongoose": "https://esm.sh/mongoose@^9.1.4"
   }
 }
 </script>
